--- a/task-06.html
+++ b/task-06.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
+    <ul id="#ingredients"></ul>
     <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
     <script src="js/task-06.js" type="module"></script>
   </body>
